--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "chart.js": "^4.4.3"
+        "@fullcalendar/core": "^6.1.15",
+        "@fullcalendar/daygrid": "^6.1.15",
+        "@fullcalendar/interaction": "^6.1.15",
+        "@fullcalendar/timegrid": "^6.1.15",
+        "chart.js": "^4.4.3",
+        "fullcalendar": "^6.1.15"
     }
 }
